--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -266,6 +266,7 @@ list(APPEND NGP_SOURCES
 	src/testbed_image.cu
 	src/testbed_nerf.cu
 	src/testbed_sdf.cu
+	src/testbed_geometry.cu
 	src/testbed_volume.cu
 	src/thread_pool.cpp
 	src/tinyexr_wrapper.cu
